--- a/gst-plugins-base/pkgconfig/gstreamer-libs-uninstalled.pc.in
+++ b/gst-plugins-base/pkgconfig/gstreamer-libs-uninstalled.pc.in
@@ -2,4 +2,8 @@ Name: GStreamer Uninstalled Media-Specific Libraries
 Description: Streaming-media framework media-specific libraries, not installed
 Version: @VERSION@
 Requires: gstreamer = @VERSION@
-Cflags: -I${pcfiledir}/gst-libs
+Libs: -L${pcfiledir}/../gst-libs/gst/gconf \
+	-L${pcfiledir}/../gst-libs/gst/audio \
+	-L${pcfiledir}/../gst-libs/gst/video \
+	-L${pcfiledir}/../gst-libs/gst/play
+Cflags: -I${pcfiledir}/../gst-libs
