--- a/gst-plugins-bad/pkgconfig/gstreamer-play-uninstalled.pc.in
+++ b/gst-plugins-bad/pkgconfig/gstreamer-play-uninstalled.pc.in
@@ -9,5 +9,5 @@ Description: Streaming-media framework, play libraries, not installed
 Requires: gstreamer >= @VERSION@
 Version: @VERSION@
 
-Libs: ${pcfiledir}/gst-libs/gst/play/libgstplay-@GST_MAJORMINOR@.la -lgstcontrol-@GST_MAJORMINOR@
-Cflags: -I${pcfiledir}/libs
+Libs: ${pcfiledir}/../gst-libs/gst/play/libgstplay-@GST_MAJORMINOR@.la -lgstcontrol-@GST_MAJORMINOR@
+Cflags: -I${pcfiledir}/../gst-libs
