--- a/gstreamer/testsuite/caps/Makefile.am
+++ b/gstreamer/testsuite/caps/Makefile.am
@@ -1,7 +1,7 @@
 GST_PLUGIN_PATH=$(shell cd $(top_builddir) && pwd)
 TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(GST_PLUGIN_PATH) GST_REGISTRY=$(GST_PLUGIN_PATH)/testsuite/test-registry.xml
 
-testprogs = intersection compatibility normalisation
+testprogs = intersection compatibility normalisation string-conversions
 
 TESTS = $(testprogs)
 
@@ -13,4 +13,5 @@ compatibility_LDADD = $(GST_LIBS)
 compatibility_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
 normalisation_LDADD = $(GST_LIBS) 
 normalisation_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
-
+string_conversions_LDADD = $(GST_LIBS) 
+string_conversions_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
