--- a/gstreamer/tests/old/testsuite/plugin/Makefile.am
+++ b/gstreamer/tests/old/testsuite/plugin/Makefile.am
@@ -1,7 +1,7 @@
-plugindir = $(shell cd $(top_builddir)/testsuite/plugin/ && pwd)
+TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
+TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
 
-GST_PLUGIN_PATH=$(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(GST_PLUGIN_PATH) GST_REGISTRY=$(GST_PLUGIN_PATH)/testsuite/test-registry.xml
+plugindir = $(shell cd $(top_builddir)/testsuite/plugin/ && pwd)
 
 plugin_LTLIBRARIES = libtestplugin.la libtestplugin2.la
 
