--- a/gstreamer/tests/old/testsuite/caps/Makefile.am
+++ b/gstreamer/tests/old/testsuite/caps/Makefile.am
@@ -1,9 +1,12 @@
-GST_PLUGIN_PATH=$(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(GST_PLUGIN_PATH) GST_REGISTRY=$(GST_PLUGIN_PATH)/testsuite/test-registry.xml
+TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
+TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
 
 testprogs = intersection compatibility normalisation string-conversions
 
-TESTS = $(testprogs)
+# we run gst-register here, which is a HACK to generate the test registry
+# before we actually run the real tests
+# a better fix is welcome :)
+TESTS = $(top_builddir)/tools/gst-register $(testprogs)
 
 check_PROGRAMS = $(testprogs)
 
