--- a/gstreamer/testsuite/Makefile.am
+++ b/gstreamer/testsuite/Makefile.am
@@ -7,8 +7,8 @@ endif
 # FIXME : threads bytestream
 SUBDIRS = caps plugin elements clock refcounting threads indexers $(GST_PARSE_DIRS) ## cleanup dynparams
 
-GST_PLUGIN_PATH = $(shell cd $(top_builddir) && pwd)
-TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(GST_PLUGIN_PATH) GST_REGISTRY=`pwd`/test-registry.xml
+TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
+TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
 
 if BUILD_FAILING_TESTS
 testprogs = test_gst_init
@@ -18,7 +18,10 @@ testprogs =
 inspectcheck = 
 endif
 
-TESTS = $(top_builddir)/tools/gst-register $(testprogs) $(inspectcheck)
+# since these TESTS are only run after recursing into subdirs,
+# gst-register should be run before that, in the first subdir that uses it
+# TESTS = $(top_builddir)/tools/gst-register $(testprogs) $(inspectcheck)
+TESTS = $(testprogs) $(inspectcheck)
 
 check_PROGRAMS = $(testprogs)
 
@@ -27,7 +30,7 @@ LIBS = $(GST_LIBS)
 AM_CFLAGS = $(GST_CFLAGS)
 
 # we makes them, we gots to clean them
-CLEANFILES = test-registry.xml elementstest-registry.xml
+CLEANFILES = test-registry.xml
 
 DIST_SUBDIRS = bytestream caps cleanup clock dynparams elements indexers \
 		plugin refcounting threads parse
