--- a/gstreamer/testsuite/indexers/Makefile.am
+++ b/gstreamer/testsuite/indexers/Makefile.am
@@ -1,3 +1,6 @@
+TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
+TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
+
 testprogs = cache1 indexdump
 
 TESTS = $(testprogs)
