--- a/gstreamer/docs/libs/Makefile.am
+++ b/gstreamer/docs/libs/Makefile.am
@@ -103,7 +103,7 @@ EXTRA_DIST = 				\
 	$(extra_files)			\
 	$(HTML_IMAGES)			\
 	$(DOC_MAIN_SGML_FILE)		\
-	$(DOC_MODULE).types		\
+#	$(DOC_MODULE).types		\
 	$(DOC_MODULE)-sections.txt
 
 DOC_STAMPS=scan-build.stamp tmpl-build.stamp sgml-build.stamp html-build.stamp \
