--- a/gst-plugins-base/gst-libs/gst/play/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/play/Makefile.am
@@ -8,7 +8,7 @@ libgstplay_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@
 libgstplay_@GST_MAJORMINOR@include_HEADERS = play.h
 
 libgstplay_@GST_MAJORMINOR@_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_CFLAGS)
-libgstplay_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS) $(GST_PLUGINS_LIBS)
+libgstplay_@GST_MAJORMINOR@_la_LIBADD = $(GST_LIBS) $(GST_PLUGINS_LIBS) $(GST_CONTROL_LIBS)
 libgstplay_@GST_MAJORMINOR@_la_LDFLAGS = -version-info @GST_PLUGINS_LIBVERSION@
 
 noinst_HEADERS = playpipelines.c
