--- a/gst-plugins-good/ext/jpeg/Makefile.am
+++ b/gst-plugins-good/ext/jpeg/Makefile.am
@@ -5,7 +5,7 @@ plugin_LTLIBRARIES = libgstjpeg.la
 libgstjpeg_la_SOURCES = gstjpeg.c gstjpegdec.c gstjpegenc.c
 libgstjpeg_la_CFLAGS = $(GST_CFLAGS)
 ## FIXME: check these CFLAGS
-## -O3 $(FOMIT_FRAME_POINTER) -funroll-all-loops -finline-functions -ffast-math -DNDEBUG
+## -O3 $(FOMIT_FRAME_POINTER) $(GST_OPT_CFLAGS) $(GST_FUNROLL_CFLAGS) -DNDEBUG
 libgstjpeg_la_LIBADD = $(JPEG_LIBS) 
 libgstjpeg_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
