--- a/gst-plugins-good/gst/goom/Makefile.am
+++ b/gst-plugins-good/gst/goom/Makefile.am
@@ -14,8 +14,8 @@ libgstgoom_la_SOURCES = gstgoom.c goom_core.c $(GOOM_FILTER_FILES) graphic.c lin
 
 noinst_HEADERS = filters.h goom_core.h goom_tools.h graphic.h lines.h 
 
-#CFLAGS += -Wall -O3 -fomit-frame-pointer -funroll-all-loops -finline-functions -ffast-math -DNDEBUG
-libgstgoom_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS) $(GOOM_FILTER_CFLAGS)
+#CFLAGS += $(GST_CFLAGS) -O3 $(GST_OPT_CFLAGS) $(GST_FUNROLL_CFLAGS) -fomit-frame-pointer -DNDEBUG
+libgstgoom_la_CFLAGS = -O2 $(GST_FFASTMATH_CFLAGS) $(GST_CFLAGS) $(GOOM_FILTER_CFLAGS)
 libgstgoom_la_LIBADD =
 libgstgoom_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
