--- a/gst-plugins-good/gst/median/Makefile.am
+++ b/gst-plugins-good/gst/median/Makefile.am
@@ -4,7 +4,7 @@ plugin_LTLIBRARIES = libgstmedian.la
 
 libgstmedian_la_SOURCES = gstmedian.c
 
-libgstmedian_la_CFLAGS = -O3 $(FOMIT_FRAME_POINTER) -funroll-all-loops -finline-functions -ffast-math $(GST_CFLAGS)
+libgstmedian_la_CFLAGS = -O3 $(FOMIT_FRAME_POINTER) $(GST_OPT_CFLAGS) $(GST_FUNROLL_CFLAGS) $(GST_CFLAGS)
 libgstmedian_la_LIBADD =
 libgstmedian_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
