Updated autogen.sh/configure.ac and various Makefiles to make the configure script set up all gcc specific compiler a...
Original commit message from CVS:
Updated autogen.sh/configure.ac and various Makefiles to make the
configure script set up all gcc specific compiler arguments, rather
than hardcoding them in the Makefile.am files

--- a/gst-plugins-base/gst/audioscale/Makefile.am
+++ b/gst-plugins-base/gst/audioscale/Makefile.am
@@ -3,7 +3,7 @@ plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 plugin_LTLIBRARIES = libgstaudioscale.la
 
 libgstaudioscale_la_SOURCES = gstaudioscale.c
-libgstaudioscale_la_CFLAGS = -ffast-math $(GST_CFLAGS)
+libgstaudioscale_la_CFLAGS = $(GST_FFASTMATH_CFLAGS) $(GST_CFLAGS)
 libgstaudioscale_la_LIBADD =
 libgstaudioscale_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
