--- a/gst-plugins-base/gst-libs/gst/resample/Makefile.am
+++ b/gst-plugins-base/gst-libs/gst/resample/Makefile.am
@@ -14,7 +14,7 @@ endif
 
 libgstresample_la_SOURCES = dtos.c dtof.c functable.c resample.c resample.h
 libgstresample_la_LIBADD =
-libgstresample_la_CFLAGS = $(GST_CFLAGS) -ffast-math $(ARCHCFLAGS)
+libgstresample_la_CFLAGS = $(GST_CFLAGS) $(GST_FFASTMATH_CFLAGS) $(ARCHCFLAGS)
 libgstresample_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 libgstresampleincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/resample
