--- a/gst-plugins-base/gst/videotestsrc/Makefile.am
+++ b/gst-plugins-base/gst/videotestsrc/Makefile.am
@@ -6,7 +6,7 @@ libgstvideotestsrc_la_SOURCES = \
 			gstvideotestsrc.c \
 			videotestsrc.c
 
-libgstvideotestsrc_la_CFLAGS = -O2 $(FOMIT_FRAME_POINTER) -funroll-all-loops -finline-functions -ffast-math $(GST_CFLAGS)
+libgstvideotestsrc_la_CFLAGS = -O2 $(FOMIT_FRAME_POINTER) $(GST_OPT_CFLAGS) $(GST_FUNROLL_CFLAGS) $(GST_CFLAGS)
 libgstvideotestsrc_la_LIBADD =
 libgstvideotestsrc_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
