Updated autogen.sh/configure.ac and various Makefiles to make the configure script set up all gcc specific compiler a...
Original commit message from CVS:
Updated autogen.sh/configure.ac and various Makefiles to make the
configure script set up all gcc specific compiler arguments, rather
than hardcoding them in the Makefile.am files

--- a/gst-plugins-bad/gst-libs/gst/riff/Makefile.am
+++ b/gst-plugins-bad/gst-libs/gst/riff/Makefile.am
@@ -8,5 +8,5 @@ libgstriffincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/riff
 libgstriffinclude_HEADERS = riff.h
 
 libgstriff_la_LIBADD =
-libgstriff_la_CFLAGS = $(GST_CFLAGS) -funroll-all-loops -finline-functions -ffast-math
+libgstriff_la_CFLAGS = $(GST_CFLAGS) $(GST_OPT_CFLAGS) $(GST_FUNROLL_CFLAGS)
 libgstriff_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
