--- a/gst-plugins-bad/gst/cdxaparse/Makefile.am
+++ b/gst-plugins-bad/gst/cdxaparse/Makefile.am
@@ -8,6 +8,6 @@ libgstcdxaparse_la_SOURCES = gstcdxaparse.c
 noinst_HEADERS = \
 		gstcdxaparse.h
 
-libgstcdxaparse_la_CFLAGS = -O2 -ffast-math $(GST_CFLAGS)
+libgstcdxaparse_la_CFLAGS = -O2 $(GST_FFASTMATH_CFLAGS) $(GST_CFLAGS)
 libgstcdxaparse_la_LIBADD =
 libgstcdxaparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
