--- a/gst-plugins-bad/gst/mpeg2sub/Makefile.am
+++ b/gst-plugins-bad/gst/mpeg2sub/Makefile.am
@@ -10,7 +10,7 @@ else
 ARCHCFLAGS = 
 endif
 
-libgstmpeg2subt_la_CFLAGS = -O3 $(ARCHCFLAGS) -fschedule-insns2 $(FOMIT_FRAME_POINTER) -finline-functions -ffast-math $(GST_CFLAGS)
+libgstmpeg2subt_la_CFLAGS = -O3 $(ARCHCFLAGS) $(GST_FSCHEDULE_CFLAGS) $(FOMIT_FRAME_POINTER) $(GST_OPT_CFLAGS) $(GST_CFLAGS)
 libgstmpeg2subt_la_LIBADD =
 libgstmpeg2subt_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
