Fix 114948 - adds some autotools magic that makes sure that we only make install ffmpeg if its actually there
Original commit message from CVS:
Fix 114948 - adds some autotools magic that makes sure that we only make install ffmpeg if its actually there

--- a/gst-plugins-bad/gst-libs/ext/ffmpeg/Makefile.am
+++ b/gst-plugins-bad/gst-libs/ext/ffmpeg/Makefile.am
@@ -73,8 +73,8 @@ checkout:
 	cvs -d:pserver:anonymous@cvs.ffmpeg.sourceforge.net:/cvsroot/ffmpeg co ffmpeg
 
 # on running make install, make sure make has been run first
-install:
-	cd ffmpeg && $(MAKE)
+install: all
+	@true
 
 # we don't install stuff so no need to uninstall
 uninstall:
