- Added testcase for fixed flag on caps/props
Original commit message from CVS:
- Added testcase for fixed flag on caps/props
- Added union testcase (not working)

--- a/gstreamer/tests/old/testsuite/caps/Makefile.am
+++ b/gstreamer/tests/old/testsuite/caps/Makefile.am
@@ -1,7 +1,7 @@
 TOP_BUILDDIR=$(shell cd $(top_builddir) && pwd)
 TESTS_ENVIRONMENT = GST_PLUGIN_PATH=$(TOP_BUILDDIR) GST_REGISTRY=$(TOP_BUILDDIR)/testsuite/test-registry.xml
 
-testprogs = intersection compatibility normalisation string-conversions
+testprogs = intersection compatibility normalisation union string-conversions fixed
 
 # we run gst-register here, which is a HACK to generate the test registry
 # before we actually run the real tests
@@ -16,5 +16,9 @@ compatibility_LDADD = $(GST_LIBS)
 compatibility_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
 normalisation_LDADD = $(GST_LIBS) 
 normalisation_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+union_LDADD = $(GST_LIBS) 
+union_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
 string_conversions_LDADD = $(GST_LIBS) 
 string_conversions_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
+fixed_LDADD = $(GST_LIBS) 
+fixed_CFLAGS = $(GST_CFLAGS) $(GNOME_CFLAGS) $(XML_CFLAGS)
